--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ header.masthead {
     background-position: center center;
     background-attachment: scroll;
     background-size: cover;
-    animation: background-opacity 13s infinite normal;
+    animation: background-opacity 25s infinite normal;
 }
 
 header.masthead .masthead-content {
@@ -40,7 +40,7 @@ header.masthead .masthead-content .masthead-subsubheading {
     }
 
     50% {
-        background-color: #00000086;
+        background-color: #000000a9;
     }
 
     100% {
@@ -54,7 +54,7 @@ header.masthead .masthead-content .masthead-subsubheading {
     }
 
     50% {
-        opacity: 80%;
+        opacity: 90%;
     }
 
     100% {
@@ -108,108 +108,252 @@ header.masthead .masthead-content .masthead-subsubheading {
 header.masthead .bg-star {
     z-index: 0;
     position: absolute;
-    font-size: 3rem;
+    font-size: 0.5vw;
     transition: 0.3s;
+    width: 4vw;
+    height: 4vw;
+    text-shadow: rgb(255, 255, 255) 0px 0 5px;
 }
 
-header.masthead .bg-star-1 {
-    height: 5vw;
-    width: 5vw;
-    top: 21vh;
-    left: 10vw;
-    /* background: #6786a3; */
+#background_stars div:nth-child(1) {
+    /* Asterism Big Dipper */
+    top: 10vh;
+    left: 7vw;
     animation: star-opacity-animation 10s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-2 {
-    height: 3vw;
-    width: 3vw;
-    top: 9vh;
-    left: 19vw;
-    /* background: #1f5f9c; */
+#background_stars div:nth-child(2) {
+    /* Asterism Big Dipper */
+    top: 12vh;
+    left: 12vw;
     animation: star-opacity-animation 17s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-3 {
-    height: 6vw;
-    width: 6vw;
+#background_stars div:nth-child(3) {
     top: 37vh;
     left: 33vw;
-    /* background: #3e7fbd; */
     animation: star-opacity-animation 14s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-4 {
-    height: 8vw;
-    width: 8vw;
+#background_stars div:nth-child(4) {
     top: 47vh;
     left: 77vw;
-    /* background: #719dc7; */
     animation: star-opacity-animation 23s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-5 {
-    height: 2vw;
-    width: 2vw;
+#background_stars div:nth-child(5) {
     top: 69vh;
     left: 69vw;
-    /* background: #3387d6; */
     animation: star-opacity-animation 13s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-6 {
-    height: 4vw;
-    width: 4vw;
+#background_stars div:nth-child(6) {
     top: 81vh;
-    left: 80vw;
-    /* background: #3f6991; */
+    left: 88vw;
     animation: star-opacity-animation 10s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-7 {
-    height: 4vw;
-    width: 4vw;
+#background_stars div:nth-child(7) {
     top: 23vh;
     left: 75vw;
-    /* background: #3f6991; */
     animation: star-opacity-animation 12s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-8 {
-    height: 4vw;
-    width: 4vw;
+#background_stars div:nth-child(8) {
     top: 5vh;
     left: 91vw;
-    /* background: #3f6991; */
     animation: star-opacity-animation 18s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-9 {
-    height: 4vw;
-    width: 4vw;
+#background_stars div:nth-child(9) {
     top: 74vh;
     left: 28vw;
-    /* background: #3f6991; */
     animation: star-opacity-animation 6s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-10 {
-    height: 4vw;
-    width: 4vw;
+#background_stars div:nth-child(10) {
     top: 90vh;
     left: 5vw;
-    /* background: #3f6991; */
     animation: star-opacity-animation 24s ease-in-out infinite both;
 }
 
-header.masthead .bg-star-11 {
-    height: 4vw;
-    width: 4vw;
+#background_stars div:nth-child(11) {
     top: 65vh;
     left: 14vw;
-    /* background: #3f6991; */
     animation: star-opacity-animation 29s ease-in-out infinite both;
 }
+
+#background_stars div:nth-child(12) {
+    top: 12vh;
+    left: 44vw;
+    animation: star-opacity-animation 24s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(13) {
+    top: 36vh;
+    left: 90vw;
+    animation: star-opacity-animation 27s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(14) {
+    top: 80vh;
+    left: 57vw;
+    animation: star-opacity-animation 18s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(15) {
+    top: 95vh;
+    left: 37vw;
+    animation: star-opacity-animation 12s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(16) {
+    top: 62vh;
+    left: 1vw;
+    animation: star-opacity-animation 21s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(17) {
+    /* Asterism Big Dipper */
+    top: 17vh;
+    left: 14vw;
+    animation: star-opacity-animation 34s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(18) {
+    /* Asterism Big Dipper */
+    top: 21vh;
+    left: 17vw;
+    animation: star-opacity-animation 9s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(19) {
+    /* Asterism Big Dipper */
+    top: 24vh;
+    left: 25vw;
+    animation: star-opacity-animation 19s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(20) {
+    /* Asterism Big Dipper */
+    top: 31vh;
+    left: 22vw;
+    animation: star-opacity-animation 32s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(21) {
+    /* Asterism Big Dipper */
+    top: 27vh;
+    left: 16.5vw;
+    animation: star-opacity-animation 14s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(22) {
+    top: 4vh;
+    left: 65vw;
+    animation: star-opacity-animation 21s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(23) {
+    top: 70vh;
+    left: 97vw;
+    animation: star-opacity-animation 18s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(24) {
+    top: 90vh;
+    left: 70vw;
+    animation: star-opacity-animation 24s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(25) {
+    top: 85vh;
+    left: 18vw;
+    animation: star-opacity-animation 29s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(26) {
+    top: 70vh;
+    left: 40vw;
+    animation: star-opacity-animation 12s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(27) {
+    top: 32vh;
+    left: 60vw;
+    animation: star-opacity-animation 14s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(28) {
+    top: 66vh;
+    left: 80vw;
+    animation: star-opacity-animation 22s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(29) {
+    top: 98vh;
+    left: 78vw;
+    animation: star-opacity-animation 38s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(30) {
+    top: 6vh;
+    left: 28vw;
+    animation: star-opacity-animation 21s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(31) {
+    top: 19vh;
+    left: 55vw;
+    animation: star-opacity-animation 15s ease-in-out infinite both;
+}
+
+#background_stars div:nth-child(32) {
+    top: 37vh;
+    left: 5vw;
+    animation: star-opacity-animation 12s ease-in-out infinite both;
+}
+
+.star-flare {
+    width: 6vh;
+    height: 6vh;
+    top: 10vh;
+    right: 20vw;
+    position: absolute;
+    background: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.466) 0%, rgba(255,255,255,0) 50%);
+    /* background-image: url(flare.png);
+    background-size: cover; */
+    -webkit-filter: drop-shadow(0 0 10px white);
+    filter: drop-shadow(0 0 10px white);
+    animation: star-flare 8s linear infinite both;
+}
+
+@keyframes star-flare {
+    0% {
+        opacity: 0%;
+    }
+
+    35% {
+        opacity: 0%;
+    }
+
+    45% {
+        opacity: 90%;
+    }
+
+    55% {
+        opacity: 90%;
+    }
+
+    65% {
+        opacity: 0%;
+    }
+
+    100% {
+        opacity: 0%;
+    }
+}
+
 
 header.masthead .bg-falling-star {
     z-index: 0;
@@ -217,13 +361,13 @@ header.masthead .bg-falling-star {
     /* -webkit-mask-image: -webkit-gradient(linear, left top, right top, color-stop(30%, rgba(247, 170, 69, 0)), color-stop(100%, rgba(247, 170, 69, 1))); */
     /* mask-size: 100%; */
     background: linear-gradient(90deg, #916b0300 0%, #f7aa45 80%);
-    filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.6));
+    filter: drop-shadow(8px 0 8px rgb(255, 255, 255));
     /* box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5); */
     transition: 3s;
     opacity: 70%;
 }
 
-header.masthead .bg-falling-star-1 {
+#background_falling_stars div:nth-child(1) {
     height: 0.8vh;
     width: 15vw;
     top: -20vh;
@@ -234,7 +378,7 @@ header.masthead .bg-falling-star-1 {
     animation: falling-star-animation-1 25s linear infinite both;
 }
 
-header.masthead .bg-falling-star-2 {
+#background_falling_stars div:nth-child(2) {
     height: 0.5vh;
     width: 10vw;
     top: 20vh;
@@ -246,7 +390,7 @@ header.masthead .bg-falling-star-2 {
     animation-delay: 1s;
 }
 
-header.masthead .bg-falling-star-3 {
+#background_falling_stars div:nth-child(3) {
     height: 1vh;
     width: 17vw;
     top: 60vh;
@@ -258,7 +402,7 @@ header.masthead .bg-falling-star-3 {
     animation-delay: 3s;
 }
 
-header.masthead .bg-falling-star-4 {
+#background_falling_stars div:nth-child(4) {
     height: 1vh;
     width: 40vw;
     top: -40vh;
@@ -270,7 +414,7 @@ header.masthead .bg-falling-star-4 {
     animation-delay: 1s;
 }
 
-header.masthead .bg-falling-star-5 {
+#background_falling_stars div:nth-child(5) {
     height: 0.7vh;
     width: 20vw;
     top: 50vh;
@@ -282,7 +426,7 @@ header.masthead .bg-falling-star-5 {
     animation-delay: 0s;
 }
 
-header.masthead .bg-falling-star-6 {
+#background_falling_stars div:nth-child(6) {
     height: 0.6vh;
     width: 30vw;
     top: -20vh;
@@ -454,19 +598,33 @@ header.masthead .bg-planet {
 
     position: absolute;
     /* border-radius: 50%; */
-    filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.6));
+    filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.6));
     /* box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5); */
     transition: 0.3s;
     opacity: 100%;
 }
 
 header.masthead .bg-planet-1 {
-    width: 30vh;
-    height: 30vh;
+    width: 20vh;
+    height: 20vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-image: url(earth.png);
+    background-size: cover;
+    background-repeat: repeat-y;
+    animation: planet-animation-1 60s linear infinite both;
+}
+
+header.masthead .bg-planet-1-right-bottom {
+    width: 35vh;
+    height: 35vh;
     max-width: 1500px;
     max-height: 1500px;
-    bottom: -15vh;
-    right: -15vh;
+    bottom: -17.5vh;
+    right: -17.5vh;
     background-image: url(earth.png);
     background-size: cover;
     animation: planet-animation-1 30s linear infinite both;
@@ -475,26 +633,81 @@ header.masthead .bg-planet-1 {
 header.masthead .bg-planet-2 {
     width: 3vh;
     height: 3vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-image: url(moon.png);
+    background-size: cover;
+    animation: planet-animation-2 40s linear infinite;
+}
+
+header.masthead .bg-planet-2-right-bottom {
+    width: 3vh;
+    height: 3vh;
     max-width: 1500px;
     max-height: 1500px;
     bottom: -2.5vh;
     right: -2.5vh;
     background-image: url(moon.png);
     background-size: cover;
-    animation: planet-animation-2 20s linear(0, 0.30 90%, 0.95 10%, 1) infinite;
+    animation: planet-animation-2-right-bottom 20s linear infinite;
 }
 
 header.masthead .bg-planet-3 {
+    width: 4vh;
+    height: 4vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    /* filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.295)); */
+    background-image: url(astronaut.png);
+    background-size: cover;
+    animation: planet-animation-3 120s linear infinite;
+}
+
+header.masthead .bg-planet-3-non-rotate {
+    width: 4vh;
+    height: 4vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    /* filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.295)); */
+    background-image: url(astronaut.png);
+    background-size: cover;
+    animation: planet-animation-3-non-rotate 60s linear infinite;
+}
+
+header.masthead .bg-planet-3-right-bottom {
     width: 4vh;
     height: 4vh;
     max-width: 1500px;
     max-height: 1500px;
     bottom: -4vh;
     right: -2.5vh;
-    filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.295));
+    /* filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.295)); */
     background-image: url(astronaut.png);
     background-size: cover;
-    animation: planet-animation-3 50s linear(0, 0.30 90%, 0.95 10%, 1) infinite;
+    animation: planet-animation-3-right-bottom 50s linear infinite;
+    animation-delay: 2s;
+}
+
+header.masthead .bg-planet-3-non-rotate-right-bottom {
+    width: 4vh;
+    height: 4vh;
+    max-width: 1500px;
+    max-height: 1500px;
+    bottom: -4vh;
+    right: -2.5vh;
+    /* filter: drop-shadow(20px 1px 10px rgba(0, 0, 0, 0.295)); */
+    background-image: url(astronaut.png);
+    background-size: cover;
+    animation: planet-animation-3-non-rotate-right-bottom 40s linear infinite;
     animation-delay: 2s;
 }
 
@@ -522,6 +735,18 @@ header.masthead .bg-planet-3 {
     }
 }
 
+@keyframes planet-animation-2-right-bottom {
+    from {
+        -webkit-transform: rotate(0deg) translateX(-45vh) rotate(0deg) rotate(0deg);
+        transform: rotate(0deg) translateX(-45vh) rotate(0deg) rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg) translateX(-45vh) rotate(-360deg) rotate(720deg);
+        transform: rotate(360deg) translateX(-45vh) rotate(-360deg) rotate(720deg);
+    }
+}
+
 @keyframes planet-animation-3 {
     from {
         -webkit-transform: rotate(0deg) translateX(-30vh) rotate(0deg) rotate(0deg);
@@ -531,5 +756,41 @@ header.masthead .bg-planet-3 {
     to {
         -webkit-transform: rotate(360deg) translateX(-30vh) rotate(-360deg) rotate(10000deg);
         transform: rotate(360deg) translateX(-30vh) rotate(-360deg) rotate(10000deg);
+    }
+}
+
+@keyframes planet-animation-3-right-bottom {
+    from {
+        -webkit-transform: rotate(0deg) translateX(-32vh) rotate(0deg) rotate(0deg);
+        transform: rotate(0deg) translateX(-32vh) rotate(0deg) rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg) translateX(-32vh) rotate(-360deg) rotate(5000deg);
+        transform: rotate(360deg) translateX(-32vh) rotate(-360deg) rotate(5000deg);
+    }
+}
+
+@keyframes planet-animation-3-non-rotate {
+    from {
+        -webkit-transform: rotate(0deg) translateX(-30vh) rotate(0deg) rotate(0deg);
+        transform: rotate(0deg) translateX(-30vh) rotate(0deg) rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg) translateX(-30vh) rotate(-360deg) rotate(360deg);
+        transform: rotate(360deg) translateX(-30vh) rotate(-360deg) rotate(360deg);
+    }
+}
+
+@keyframes planet-animation-3-non-rotate-right-bottom {
+    from {
+        -webkit-transform: rotate(0deg) translateX(-32vh) rotate(0deg) rotate(0deg);
+        transform: rotate(0deg) translateX(-32vh) rotate(0deg) rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg) translateX(-32vh) rotate(-360deg) rotate(360deg);
+        transform: rotate(360deg) translateX(-32vh) rotate(-360deg) rotate(360deg);
     }
 }
