--- a/bootstrap.css
+++ b/bootstrap.css
@@ -3224,13 +3224,13 @@ textarea.form-control-lg {
 
 .dropdown-menu {
   --bs-dropdown-zindex: 1000;
-  --bs-dropdown-min-width: 10rem;
+  --bs-dropdown-min-width: fit-content;
   --bs-dropdown-padding-x: 0;
-  --bs-dropdown-padding-y: 0.5rem;
+  --bs-dropdown-padding-y: 0.2rem;
   --bs-dropdown-spacer: 0.125rem;
-  --bs-dropdown-font-size: 1rem;
-  --bs-dropdown-color: #212529;
-  --bs-dropdown-bg: #fff;
+  --bs-dropdown-font-size: 0.75vh;
+  --bs-dropdown-color: #adadad;
+  --bs-dropdown-bg: rgba(0, 0, 0, 0.226);
   --bs-dropdown-border-color: var(--bs-border-color-translucent);
   --bs-dropdown-border-radius: 0.375rem;
   --bs-dropdown-border-width: 1px;
@@ -3238,23 +3238,23 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-divider-margin-y: 0.5rem;
   --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  --bs-dropdown-link-color: #212529;
-  --bs-dropdown-link-hover-color: #1e2125;
-  --bs-dropdown-link-hover-bg: #e9ecef;
+  --bs-dropdown-link-color: #adadad;
+  --bs-dropdown-link-hover-color: #adadad;
+  --bs-dropdown-link-hover-bg: rgba(100, 100, 100, 0.226);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #ee0979;
+  --bs-dropdown-link-active-bg: rgba(150, 150, 150, 0.226);
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
   --bs-dropdown-header-color: #6c757d;
   --bs-dropdown-header-padding-x: 1rem;
-  --bs-dropdown-header-padding-y: 0.5rem;
+  --bs-dropdown-header-padding-y: 20px;
   position: absolute;
   z-index: var(--bs-dropdown-zindex);
   display: none;
   min-width: var(--bs-dropdown-min-width);
   padding: var(--bs-dropdown-padding-y) var(--bs-dropdown-padding-x);
-  margin: 0;
+  margin: 7px 0 0 0;
   font-size: var(--bs-dropdown-font-size);
   color: var(--bs-dropdown-color);
   text-align: left;
@@ -3263,6 +3263,8 @@ textarea.form-control-lg {
   background-clip: padding-box;
   border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color);
   border-radius: var(--bs-dropdown-border-radius);
+  letter-spacing: 1px;
+  font-weight: light;
 }
 .dropdown-menu[data-bs-popper] {
   top: 100%;
@@ -10884,12 +10886,13 @@ html {
 
   .btn-s {
     text-transform: uppercase;
-    font-weight: light;
+    
     padding: 0.5vh 1vh;
     /* margin-top: 3vh; */
     font-size: 0.75vh;
     /* font-weight: 700; */
     letter-spacing: 1px;
+    font-weight: light;
   }
 
 .navbar-opacity-high {
